apps/minio/tenant/minio-tenant-s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-minio
    namespace: minio
    annotations:
        nginx.org/ssl-services: minio
        nginx.org/client-max-body-size: 0m
        nginx.org/rewrites: serviceName=minio rewrite=/
        nginx.org/allowed-sources: ENC[AES256_GCM,data:oB2Ya1ByUGiQC4b+4n0LuK3+UQ9zmnHSOmyZrbI=,iv:Y7SlOcEdlm0eAoE8glaizk31mmCvj0Y5QzL10UlGv+c=,tag:8VQxcLTIcot7SdpyQisvlw==,type:str]
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:ArU+kjGsBHsWkDMRC+WnHieDrDY=,iv:B2Y5Me8lHKKFbTFU3uv9bvf/Kl+sWjwXqdYb9CWcb9k=,tag:Wk51Vm/9Hctph2tzRCIC8w==,type:str]
          secretName: minio-tenant-s3-cert
        - hosts:
            - ENC[AES256_GCM,data:6KwCIARroimtWyxHJDAWEsEmYIW/5GE2v+0t,iv:QUAKKhDTcbHXWG+OhB82nQQ/ZZUi29R766Zr67dg+Bw=,tag:tQxG4/R3XuGKFIKJ3YUEgg==,type:str]
          secretName: minio-tenant-s3-cert
    rules:
        - host: ENC[AES256_GCM,data:dOhA4jpjx/wylEo49naKa5yUKYQ=,iv:XdF9GhAZS/4cmu6rudRlAT9IhHWdftiU7FMsw5/dTA4=,tag:B8nml3QUZDrUvUGSS4853A==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: minio
                        port:
                            name: https-minio
        - host: ENC[AES256_GCM,data:kjzndIrhK2plYPrNSILWPvaiZRsRPsYr4CRe,iv:TbxajTM3sNW2jTiK9o45iK7EPcevkTQbjMVyKsIyER8=,tag:h+3WH7nirMae+ohdceJyeA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: minio
                        port:
                            name: https-minio
sops:
    lastmodified: "2026-08-17T21:42:23Z"
    mac: ENC[AES256_GCM,data:Y+YHMhF8NUHHZvuH2ElNrJ6wdeHWveLcLVTYRDtPJMIUITMHsaQG1Rzo18MxaLRFjvQMuGVXzuVl6mULUfOcZogKS3V9b99vXu/DGr1ZuMR8qx9uYuQ2gTXxGxMMmBP96GgfQ+Vixl/Wni1ps0uSrwrDBeV664t1I8//t+F3pZ0=,iv:yT4pKLcg5rkuL4Uzr9sfRzgEdpoVWuzebuugVyMW+aU=,tag:27le+7P0W9So5BgoleAZBw==,type:str]
    pgp:
        - created_at: "2026-08-17T21:42:23Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ/+K2Rc3vECegW1D5UWm5gVIWaaEeFL3LqJgyP/Uy3uwEdu
[...]
            yfjhYAXqA4MdyjR/Ud1VS5UMIsibmZcxiaZd9ptze48qdzUeKMUS4SQ=
            =UVF8
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(host|hosts|dnsNames|nginx\.org/allowed-sources)$
    version: 3.11.0
